<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeActivity"
    android:background="@color/grey"
    tools:ignore="ScrollViewCount"
    android:scrollbars="vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
       >

    <ImageView
        android:id="@+id/iv_sistema"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:src="@drawable/sistema">

    </ImageView>

    <TextView
        android:id="@+id/tv_TID"
        app:layout_constraintTop_toBottomOf="@+id/iv_sistema"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center">
    </TextView>

    <TextView
        android:padding="5dp"
        android:id="@+id/tv_sdkver"
        app:layout_constraintTop_toBottomOf="@+id/tv_TID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:layout_marginTop="1dp"
        android:text="@string/sdk_version"
        android:textSize="17sp"
        android:textAlignment="textStart">
    </TextView>

    <TextView
        android:padding="5dp"
        android:id="@+id/tv_fwver"
        app:layout_constraintTop_toBottomOf="@+id/tv_sdkver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:layout_marginTop="1dp"
        android:text="@string/firmware_version"
        android:textSize="17sp"
        android:textAlignment="textStart">
    </TextView>

    <TextView
        android:padding="5dp"
        android:id="@+id/tv_prover"
        app:layout_constraintTop_toBottomOf="@+id/tv_fwver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:layout_marginTop="1dp"
        android:text="Processor Version :"
        android:textSize="17sp"
        android:textAlignment="textStart">
    </TextView>


    <TextView
        android:padding="5dp"
        android:id="@+id/tv_fw_code"
        app:layout_constraintTop_toBottomOf="@+id/tv_prover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:layout_marginTop="1dp"
        android:text="@string/firmware_return_code"
        android:textSize="17sp"
        android:textAlignment="textStart">
    </TextView>



    <TextView
        android:padding="5dp"
        android:id="@+id/tv_threat_list"
        app:layout_constraintTop_toBottomOf="@+id/tv_fw_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:text="Threat List"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center">
    </TextView>

  <ListView
      android:id="@+id/lv_threat"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_threat_list"
      app:layout_constraintBottom_toTopOf="@+id/tv_enableVG"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:background="@color/white"
      android:visibility="gone"
      />

    <TextView
        android:id="@+id/tv_noth"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_threat_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bt_demosfio"
        android:background="@color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="15sp"
        />


    <TextView
        android:id="@+id/tv_enableVG"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toBottomOf="@+id/lv_threat"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAlignment="center"
        android:paddingTop="10dp">

    </TextView>




    <Button
        android:id="@+id/bt_demosfio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_threat"
        tools:ignore="MissingConstraints"
        android:text="@string/demo_sfio_string_to_from_file"
        android:background="@color/red"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/bt_bd_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Demo SFIO Block Data to/from File"
        app:layout_constraintTop_toBottomOf="@+id/bt_demosfio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/bt_bd_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_sfio_block_data_encryption"
        app:layout_constraintTop_toBottomOf="@+id/bt_bd_file"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/bt_ef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_sfio_existing_text_file"
        android:background="@color/red"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/bt_bd_en"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/bt_ntf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Demo SFIO Existing Non Text File"
        android:background="@color/red"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/bt_ef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/bt_kb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Demo Secure Keyboard"
        android:background="@color/red"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/bt_ntf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>